--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <header>
-      <a href="/" target="_blank">WEBSTUDIO</a>
       <nav>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -86,7 +86,7 @@
       </section>
     </main>
     <footer>
-      <h3>WEBSTUDIO</h3>
+      <a href="./index.html">WEBSTUDIO</a>
       <p>
         Increase the flow of customers and sales for your business with digital marketing & growth solutions.
       </p>
