--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li></li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -65,22 +65,38 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/mark-guerrero.jpg" alt="Mark Guerro Headshot" width="264"/>
+            <img
+              src="./images/mark-guerrero.jpg"
+              alt="Mark Guerro Headshot"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tom-ford.jpg" alt="Tom Ford Headshot" width="264"/>
+            <img
+              src="./images/tom-ford.jpg"
+              alt="Tom Ford Headshot"
+              width="264"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/camila-garcia.jpg" alt="Camila Garcia Headshot" width="264"/>
+            <img
+              src="./images/camila-garcia.jpg"
+              alt="Camila Garcia Headshot"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson Headshot" width="264"/>
+            <img
+              src="./images/daniel-wilson.jpg"
+              alt="Daniel Wilson Headshot"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -90,7 +106,8 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
       </p>
     </footer>
   </body>
