--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </section>
 
       <section id="values">
+        <h2>Our Values</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
